grammar/gen/grammar/OciPolicyParser.py
# Generated from grammar/OciPolicy.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OciPolicyParser ( Parser ):

    grammarFileName = "OciPolicy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "','", "':'", "'.'", "'='", "'!='" ]

    symbolicNames = [ "<INVALID>", "ALLOW", "DENY", "ENDORSE", "ADMIT", 
                      "DEFINE", "GROUP", "DYNAMIC_GROUP", "ANY_USER", "ANY_GROUP", 
                      "TO", "IN", "TENANCY", "COMPARTMENT", "WHERE", "ALL", 
                      "ANY", "AS", "ID", "INSPECT", "READ", "USE", "MANAGE", 
                      "ANY_TENANCY", "LBRACE", "RBRACE", "COMMA", "COLON", 
                      "DOT", "EQ", "NEQ", "OCID", "IDENTIFIER", "ALL_RESOURCES", 
                      "STRING", "REGEX_MATCH", "NEQ_REGEX_MATCH", "WS", 
                      "NEWLINE" ]

    RULE_policyStatement = 0
    RULE_defineStatement = 1
    RULE_definableType = 2
    RULE_accessStatement = 3
    RULE_effect = 4
    RULE_subject = 5
    RULE_principalSpec = 6
    RULE_principalList = 7
    RULE_verb = 8
    RULE_resource = 9
    RULE_resourceId = 10
    RULE_location = 11
    RULE_compartmentPath = 12
    RULE_whereClause = 13
    RULE_condition = 14
    RULE_conditionList = 15
    RULE_conditionExpr = 16
    RULE_conditionLhs = 17
    RULE_conditionIdentifier = 18
    RULE_singleCondition = 19
    RULE_identifier = 20
    RULE_ocid = 21

    ruleNames =  [ "policyStatement", "defineStatement", "definableType", 
                   "accessStatement", "effect", "subject", "principalSpec", 
                   "principalList", "verb", "resource", "resourceId", "location", 
                   "compartmentPath", "whereClause", "condition", "conditionList", 
                   "conditionExpr", "conditionLhs", "conditionIdentifier", 
                   "singleCondition", "identifier", "ocid" ]

    EOF = Token.EOF
    ALLOW=1
    DENY=2
    ENDORSE=3
    ADMIT=4
    DEFINE=5
    GROUP=6
    DYNAMIC_GROUP=7
    ANY_USER=8
    ANY_GROUP=9
    TO=10
    IN=11
    TENANCY=12
    COMPARTMENT=13
    WHERE=14
    ALL=15
    ANY=16
    AS=17
    ID=18
    INSPECT=19
    READ=20
    USE=21
    MANAGE=22
    ANY_TENANCY=23
    LBRACE=24
    RBRACE=25
    COMMA=26
    COLON=27
    DOT=28
    EQ=29
    NEQ=30
    OCID=31
    IDENTIFIER=32
    ALL_RESOURCES=33
    STRING=34
    REGEX_MATCH=35
    NEQ_REGEX_MATCH=36
    WS=37
    NEWLINE=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defineStatement(self):
            return self.getTypedRuleContext(OciPolicyParser.DefineStatementContext,0)


        def accessStatement(self):
            return self.getTypedRuleContext(OciPolicyParser.AccessStatementContext,0)


        def getRuleIndex(self):
            return OciPolicyParser.RULE_policyStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicyStatement" ):
                listener.enterPolicyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicyStatement" ):
                listener.exitPolicyStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicyStatement" ):
                return visitor.visitPolicyStatement(self)
            else:
                return visitor.visitChildren(self)




    def policyStatement(self):

        localctx = OciPolicyParser.PolicyStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policyStatement)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.defineStatement()
                pass
            elif token in [1, 2, 3, 4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.accessStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.alias = None # IdentifierContext
            self.value = None # OcidContext

        def DEFINE(self):
            return self.getToken(OciPolicyParser.DEFINE, 0)

        def definableType(self):
            return self.getTypedRuleContext(OciPolicyParser.DefinableTypeContext,0)


        def AS(self):
            return self.getToken(OciPolicyParser.AS, 0)

        def identifier(self):
            return self.getTypedRuleContext(OciPolicyParser.IdentifierContext,0)


        def ocid(self):
            return self.getTypedRuleContext(OciPolicyParser.OcidContext,0)


        def getRuleIndex(self):
            return OciPolicyParser.RULE_defineStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineStatement" ):
                listener.enterDefineStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineStatement" ):
                listener.exitDefineStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineStatement" ):
                return visitor.visitDefineStatement(self)
            else:
                return visitor.visitChildren(self)




    def defineStatement(self):

        localctx = OciPolicyParser.DefineStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_defineStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(OciPolicyParser.DEFINE)
            self.state = 49
            self.definableType()
            self.state = 50
            localctx.alias = self.identifier()
            self.state = 51
            self.match(OciPolicyParser.AS)
            self.state = 52
            localctx.value = self.ocid()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinableTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TENANCY(self):
            return self.getToken(OciPolicyParser.TENANCY, 0)

        def GROUP(self):
            return self.getToken(OciPolicyParser.GROUP, 0)

        def DYNAMIC_GROUP(self):
            return self.getToken(OciPolicyParser.DYNAMIC_GROUP, 0)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_definableType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinableType" ):
                listener.enterDefinableType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinableType" ):
                listener.exitDefinableType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinableType" ):
                return visitor.visitDefinableType(self)
            else:
                return visitor.visitChildren(self)




    def definableType(self):

        localctx = OciPolicyParser.DefinableTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_definableType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4288) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def effect(self):
            return self.getTypedRuleContext(OciPolicyParser.EffectContext,0)


        def subject(self):
            return self.getTypedRuleContext(OciPolicyParser.SubjectContext,0)


        def TO(self):
            return self.getToken(OciPolicyParser.TO, 0)

        def verb(self):
            return self.getTypedRuleContext(OciPolicyParser.VerbContext,0)


        def resource(self):
            return self.getTypedRuleContext(OciPolicyParser.ResourceContext,0)


        def IN(self):
            return self.getToken(OciPolicyParser.IN, 0)

        def location(self):
            return self.getTypedRuleContext(OciPolicyParser.LocationContext,0)


        def principalSpec(self):
            return self.getTypedRuleContext(OciPolicyParser.PrincipalSpecContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(OciPolicyParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return OciPolicyParser.RULE_accessStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessStatement" ):
                listener.enterAccessStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessStatement" ):
                listener.exitAccessStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessStatement" ):
                return visitor.visitAccessStatement(self)
            else:
                return visitor.visitChildren(self)




    def accessStatement(self):

        localctx = OciPolicyParser.AccessStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_accessStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.effect()
            self.state = 57
            self.subject()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18 or _la==32:
                self.state = 58
                self.principalSpec()


            self.state = 61
            self.match(OciPolicyParser.TO)
            self.state = 62
            self.verb()
            self.state = 63
            self.resource()
            self.state = 64
            self.match(OciPolicyParser.IN)
            self.state = 65
            self.location()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 66
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EffectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALLOW(self):
            return self.getToken(OciPolicyParser.ALLOW, 0)

        def DENY(self):
            return self.getToken(OciPolicyParser.DENY, 0)

        def ENDORSE(self):
            return self.getToken(OciPolicyParser.ENDORSE, 0)

        def ADMIT(self):
            return self.getToken(OciPolicyParser.ADMIT, 0)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_effect

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEffect" ):
                listener.enterEffect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEffect" ):
                listener.exitEffect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEffect" ):
                return visitor.visitEffect(self)
            else:
                return visitor.visitChildren(self)




    def effect(self):

        localctx = OciPolicyParser.EffectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_effect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GROUP(self):
            return self.getToken(OciPolicyParser.GROUP, 0)

        def DYNAMIC_GROUP(self):
            return self.getToken(OciPolicyParser.DYNAMIC_GROUP, 0)

        def ANY_USER(self):
            return self.getToken(OciPolicyParser.ANY_USER, 0)

        def ANY_GROUP(self):
            return self.getToken(OciPolicyParser.ANY_GROUP, 0)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_subject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubject" ):
                listener.enterSubject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubject" ):
                listener.exitSubject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubject" ):
                return visitor.visitSubject(self)
            else:
                return visitor.visitChildren(self)




    def subject(self):

        localctx = OciPolicyParser.SubjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 960) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrincipalSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.principalOcid = None # OcidContext

        def principalList(self):
            return self.getTypedRuleContext(OciPolicyParser.PrincipalListContext,0)


        def ID(self):
            return self.getToken(OciPolicyParser.ID, 0)

        def ocid(self):
            return self.getTypedRuleContext(OciPolicyParser.OcidContext,0)


        def getRuleIndex(self):
            return OciPolicyParser.RULE_principalSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrincipalSpec" ):
                listener.enterPrincipalSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrincipalSpec" ):
                listener.exitPrincipalSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrincipalSpec" ):
                return visitor.visitPrincipalSpec(self)
            else:
                return visitor.visitChildren(self)




    def principalSpec(self):

        localctx = OciPolicyParser.PrincipalSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_principalSpec)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.principalList()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(OciPolicyParser.ID)
                self.state = 75
                localctx.principalOcid = self.ocid()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrincipalListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OciPolicyParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(OciPolicyParser.IdentifierContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(OciPolicyParser.COMMA)
            else:
                return self.getToken(OciPolicyParser.COMMA, i)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_principalList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrincipalList" ):
                listener.enterPrincipalList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrincipalList" ):
                listener.exitPrincipalList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrincipalList" ):
                return visitor.visitPrincipalList(self)
            else:
                return visitor.visitChildren(self)




    def principalList(self):

        localctx = OciPolicyParser.PrincipalListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_principalList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.identifier()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 79
                self.match(OciPolicyParser.COMMA)
                self.state = 80
                self.identifier()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSPECT(self):
            return self.getToken(OciPolicyParser.INSPECT, 0)

        def READ(self):
            return self.getToken(OciPolicyParser.READ, 0)

        def USE(self):
            return self.getToken(OciPolicyParser.USE, 0)

        def MANAGE(self):
            return self.getToken(OciPolicyParser.MANAGE, 0)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_verb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerb" ):
                listener.enterVerb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerb" ):
                listener.exitVerb(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerb" ):
                return visitor.visitVerb(self)
            else:
                return visitor.visitChildren(self)




    def verb(self):

        localctx = OciPolicyParser.VerbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_verb)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7864320) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def resourceId(self):
            return self.getTypedRuleContext(OciPolicyParser.ResourceIdContext,0)


        def getRuleIndex(self):
            return OciPolicyParser.RULE_resource

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResource" ):
                listener.enterResource(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResource" ):
                listener.exitResource(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResource" ):
                return visitor.visitResource(self)
            else:
                return visitor.visitChildren(self)




    def resource(self):

        localctx = OciPolicyParser.ResourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_resource)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.resourceId()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ResourceIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL_RESOURCES(self):
            return self.getToken(OciPolicyParser.ALL_RESOURCES, 0)

        def IDENTIFIER(self):
            return self.getToken(OciPolicyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_resourceId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterResourceId" ):
                listener.enterResourceId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitResourceId" ):
                listener.exitResourceId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitResourceId" ):
                return visitor.visitResourceId(self)
            else:
                return visitor.visitChildren(self)




    def resourceId(self):

        localctx = OciPolicyParser.ResourceIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_resourceId)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not(_la==32 or _la==33):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TENANCY(self):
            return self.getToken(OciPolicyParser.TENANCY, 0)

        def COMPARTMENT(self):
            return self.getToken(OciPolicyParser.COMPARTMENT, 0)

        def compartmentPath(self):
            return self.getTypedRuleContext(OciPolicyParser.CompartmentPathContext,0)


        def ANY_TENANCY(self):
            return self.getToken(OciPolicyParser.ANY_TENANCY, 0)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_location

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocation" ):
                listener.enterLocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocation" ):
                listener.exitLocation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocation" ):
                return visitor.visitLocation(self)
            else:
                return visitor.visitChildren(self)




    def location(self):

        localctx = OciPolicyParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_location)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(OciPolicyParser.TENANCY)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(OciPolicyParser.COMPARTMENT)
                self.state = 94
                self.compartmentPath()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(OciPolicyParser.ANY_TENANCY)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompartmentPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OciPolicyParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(OciPolicyParser.IdentifierContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(OciPolicyParser.COLON)
            else:
                return self.getToken(OciPolicyParser.COLON, i)

        def getRuleIndex(self):
            return OciPolicyParser.RULE_compartmentPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompartmentPath" ):
                listener.enterCompartmentPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompartmentPath" ):
                listener.exitCompartmentPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompartmentPath" ):
                return visitor.visitCompartmentPath(self)
            else:
                return visitor.visitChildren(self)




    def compartmentPath(self):

        localctx = OciPolicyParser.CompartmentPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_compartmentPath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.identifier()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 99
                self.match(OciPolicyParser.COLON)
                self.state = 100
                self.identifier()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(OciPolicyParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(OciPolicyParser.ConditionContext,0)


        def getRuleIndex(self):
            return OciPolicyParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = OciPolicyParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(OciPolicyParser.WHERE)
            self.state = 107
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL(self):
            return self.getToken(OciPolicyParser.ALL, 0)

        def LBRACE(self):
            return self.getToken(OciPolicyParser.LBRACE, 0)

        def conditionList(self):
            return self.getTypedRuleContext(OciPolicyParser.ConditionListContext,0)


        def RBRACE(self):
            return self.getToken(OciPolicyParser.RBRACE, 0)

        def ANY(self):
            return self.getToken(OciPolicyParser.ANY, 0)
